--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -61,8 +61,8 @@ body {
 
 .to__top {
     display: none;
-    width: 4em;
-    height: 4em;
+    width: 3em;
+    height: 3em;
     position: fixed;
     right: 2%;
     bottom: 5%;
@@ -75,7 +75,7 @@ body {
 
 .modal {
     top: 32.5%;
-    left: 32.5%;
+    left: 4.5%;
     
     &::backdrop {
         opacity: 0.75;
@@ -99,11 +99,33 @@ body {
     }
 
     &__title {
-        padding: 5em;
-        padding-top: 4em;
+        padding: 2em;
+        padding-top: 1em;
     }
 }
 
 @media only screen and (min-width: 1000px) {
+    .modal {
+        top: 32.5%;
+        left: 32.5%;
+    
+        &__title {
+            padding: 5em;
+            padding-top: 4em;
+        }
+    }
 
+    .to__top {
+        display: none;
+        width: 4em;
+        height: 4em;
+        position: fixed;
+        right: 2%;
+        bottom: 5%;
+    
+        &-img {
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
